--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
 	<head>
 		<title>Живая История</title>
 		<meta charset="utf-8">
-		<style>
-			p {
-			margin-top: 50px;
-			margin-bottom: 50px;
-			}
-			header {
-			margin-top: 100px;
-			margin-bottom: 100px;
-			}
-		</style>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
 		<header>
@@ -20,39 +11,32 @@
 			<h1>ИСТОРИЯ</h1>
 			<span><em>Историю создаете ВЫ!</em></span>
 		</header>
-		<section>
-			<article>
-				<b>
-				<h1>
-				МАКСИМ
-				<h1>
-        </b>
-				<h1>
-				ГОРЬКИЙ
-				<h1>
-     	</article>
-			<h5>
-			БОЛЬШЕ
-			<h4>
-			<h5>
-			ЧЕМ ПИСАТЕЛЬ
-			<h4>
-			<p>
+		<main>
+			<div>
+			<h1>МАКСИМ</h1>
+		    <h1>ГОРЬКИЙ</h1>
+			<h5>БОЛЬШЕ</h5>
+			<h5>ЧЕМ ПИСАТЕЛЬ</h5>
+			</div>
+			
+			<div>
 			<h3>НИ ВОЛИ НИ ХЛЕБА</h3>
 			<h6>АНТИКРЕСТЬЯНСКАЯ ПОЛИТИКА</h6>
 			<h6>БОЛЬШЕВИКОВ в 1918-1921 гг.</h6>
-			</p>
-			<p>
+			</div>
+			
+			<div>
 			<h3>СМУТНОЕ ВРЕМЯ</h3>
 			<h6>КАКОЙ БЫЛА РОССИЯ</h6>
 			<h6>ДВАДЦАТЬ ЛЕТ НАЗАД</h6>
-			</p>
-			<p>
+			</div>
+			
+			<div>
 			<h3>БОЛЬШАЯ СТРОЙКА</h3>
 			<h6>ЭКОНОМИЧЕСКИЙ БУМ</h6>
 			<h6>В КРЫМУ в2014-2018 гг.</h6>
-			</p>
-		</section>
+			</div>
+		</main>
 		<footer>
 			<span>9 772542 09 2003</span>
 		</footer>
